--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_vales.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_vales.cshtml
@@ -7,10 +7,10 @@
         settings.CallbackRouteValues = new { Controller = "ConciliacionCaja", Action = "GridViewPartial_conciliacion_vales", Area = "Caja" };
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
-        settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ConciliacionCaja", Action = "EditingAddNew", Area = "Caja" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ConciliacionCaja", Action = "EditingUpdate", Area = "Caja" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ConciliacionCaja", Action = "EditingDelete", Area = "Caja" };
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ConciliacionCaja", Action = "EditingAddNewVale", Area = "Caja" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ConciliacionCaja", Action = "EditingUpdateVale", Area = "Caja" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ConciliacionCaja", Action = "EditingDeleteVale", Area = "Caja" };
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = true;
@@ -30,20 +30,88 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdPersona"] = null;
+            e.NewValues["IdPersona"] = 0;
             e.NewValues["fecha"] = DateTime.Now.Date;
             e.NewValues["Observacion"] = string.Empty;
-            e.NewValues["idTipoMovi"] = null;
+            e.NewValues["IdTipoMovi"] = null;
             e.NewValues["valor"] = 0;
         };
 
-        settings.Columns.Add("IdCbteCble_movcaja");
-        settings.Columns.Add("IdPersona");
-        settings.Columns.Add("fecha");
-        settings.Columns.Add("idTipoMovi");
-        settings.Columns.Add("Observacion");
-        settings.Columns.Add("valor");        
-    });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_nombreCompleto";
+            column.Caption = "Beneficiario";
+            column.Width = Unit.Percentage(30);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdPersona";
+            column.Caption = "Beneficiario";
+            column.Width = Unit.Percentage(30);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
+            {
+                Html.RenderPartial("_ComboBoxPartial_persona", DataBinder.Eval(c.DataItem, "IdPersona"));
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "idTipoMovi";
+            column.Caption = "Tipo";
+            column.Width = Unit.Percentage(20);
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.Width = Unit.Percentage(100);
+                p.ValueField = "IdTipoMovi";
+                p.TextField = "tm_descripcion";
+                p.DropDownStyle = DropDownStyle.DropDownList;
+                p.ValueType = typeof(int);
+                p.BindList(new Core.Erp.Bus.Caja.caj_Caja_Movimiento_Tipo_Bus().get_list(Convert.ToInt32(Session["IdEmpresa"]),"-", false));
+                p.Columns.Add("tm_descripcion", "Tipo").Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "fecha";
+            column.Caption = "Fecha";
+            column.Width = Unit.Percentage(15);
+            column.EditorProperties().DateEdit(p =>
+            {
+                p.Width = Unit.Percentage(100);
+                p.DisplayFormatString = "dd/MM/yyyy";
+                p.EditFormatString = "dd/MM/yyyy";
+            });
+        });        
+        
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "valor";
+            column.Caption = "Valor";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().SpinEdit(p =>
+            {
+                p.Width = Unit.Percentage(100);
+                p.MinValue = 0;
+                p.NumberFormat = SpinEditNumberFormat.Number;
+                p.DisplayFormatString = "{0:N2}";
+            });
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Observacion";
+            column.Caption = "Observación";
+            column.Width = Unit.Percentage(15);
+            column.EditorProperties().Memo(p =>
+            {
+                p.Width = Unit.Percentage(100);
+            });
+        });
+
     });
 }
-@grid.Bind(Model).GetHtml()
+@grid.Bind(Model.lst_det_vale).GetHtml()
