--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_007.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_007.cshtml
@@ -56,7 +56,7 @@
                     <div class="col-md-2">
                         <div class="form-group">
                             <div class="checkbox">
-                                <label for="Mostrar_agrupado">@Html.CheckBoxFor(q => q.Mostrar_agrupado) Mostrar agrupado</label>
+                                <label for="mostrar_agrupado">@Html.CheckBoxFor(q => q.mostrar_agrupado) Mostrar agrupado</label>
                             </div>
                         </div>
                     </div>
