--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas.cshtml
@@ -28,12 +28,47 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
         settings.Columns.Add("IdCbteCble_Ogiro","ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("Tipo_documento", "Tipo").Width = Unit.Percentage(15);
+        settings.Columns.Add("Tipo_documento", "Tipo").Width = Unit.Percentage(10);
         settings.Columns.Add("co_factura", "# Documento").Width = Unit.Percentage(20);
         settings.Columns.Add(column => {
+            column.Width = Unit.Percentage(10);
             column.FieldName = "co_FechaFactura";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "pe_nombreCompleto";
+            column.Caption = "Proveedor";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "co_baseImponible";
+            column.Caption = "Subtotal";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "co_valoriva";
+            column.Caption = "I.V.A.";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "co_total";
+            column.Caption = "Total";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "Saldo_OG";
+            column.Caption = "Saldo";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
     });
 }
