--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_008.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_008.cshtml
@@ -32,7 +32,23 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdProveedor">Proveedor</label>
-                            @Html.DropDownListFor(q => q.IdProveedor, new SelectList(ViewBag.lst_proveedor, "IdClaseProveedor", "descripcion_clas_prove"), new { @class = "form-control" })
+                              @Html.DevExpress().ComboBoxFor(q => q.IdProveedor, settings =>
+                           {
+                               settings.Name = "IdProveedor";
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                               settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                               settings.Properties.Columns.Add("IdProveedor", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                               settings.Properties.Columns.Add("descripcion_clas_prove", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                               //Campo ID
+                               settings.Properties.ValueField = "IdProveedor";
+                               settings.Properties.ValueType = typeof(decimal);
+                               settings.Properties.TextField = "descripcion_clas_prove";
+                               //Boton para seleccionar ningun registro
+                               settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                               settings.Properties.NullText = "== Seleccione ==";
+                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                               settings.Properties.AllowNull = true;
+                           }).BindList(ViewBag.lst_proveedor).GetHtml()
                             @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                         </div>
                     </div>
