--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_002.cshtml
@@ -1,7 +1,156 @@
-﻿
+﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
+    Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "FAC_002";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
 }
+@using (Html.BeginForm("FAC_002", "FacturacionReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
+{
+    <div class="box collapsed-box">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                </div>
+            </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-plus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdSucursal">Sucursal</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdSucursal, settings =>
+                         {
+                             settings.Name = "IdSucursal";
+                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                             settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                             settings.Properties.Columns.Add("IdSucursal", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                             settings.Properties.Columns.Add("Su_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                             //Campo ID
+                             settings.Properties.ValueField = "IdSucursal";
+                             settings.Properties.ValueType = typeof(int);
+                             settings.Properties.TextField = "Su_descripcion";
+                             //Boton para seleccionar ningun registro
+                             settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                             settings.Properties.NullText = "== Seleccione ==";
+                             settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                             settings.Properties.AllowNull = true;
+                         }).BindList(ViewBag.lst_sucursal).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdCliente">Cliente</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdCliente, settings =>
+                         {
+                             settings.Name = "IdCliente";
+                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                             settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                             settings.Properties.Columns.Add("IdCliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                             settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                             //Campo ID
+                             settings.Properties.ValueField = "IdCliente";
+                             settings.Properties.ValueType = typeof(decimal);
+                             settings.Properties.TextField = "Descripcion_tip_cliente";
+                             //Boton para seleccionar ningun registro
+                             settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                             settings.Properties.NullText = "== Seleccione ==";
+                             settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                             settings.Properties.AllowNull = true;
+                         }).BindList(ViewBag.lst_cliente).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-<h2>FAC_002</h2>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdSucursal">Tipo cliente</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdClienteContacto, settings =>
+                         {
+                             settings.Name = "Idtipo_cliente";
+                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                             settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                             settings.Properties.Columns.Add("Idtipo_cliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                             settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                             //Campo ID
+                             settings.Properties.ValueField = "Idtipo_cliente";
+                             settings.Properties.ValueType = typeof(int);
+                             settings.Properties.TextField = "Descripcion_tip_cliente";
+                             //Boton para seleccionar ningun registro
+                             settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                             settings.Properties.NullText = "== Seleccione ==";
+                             settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                             settings.Properties.AllowNull = true;
+                         }).BindList(ViewBag.lst_tipo).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdClienteContacto, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">Fecha *</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                @Html.TextBoxFor(q => q.fechaCorte, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
+                                @Html.ValidationMessageFor(q => q.fecha, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
+        </div>
+    </div>
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            @Html.DevExpress().WebDocumentViewer(settings =>
+       {
+           settings.MobileMode = false;
+           settings.Name = "webDocumentViewer";
+       }).Bind(ViewBag.Report).GetHtml();
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
+}
+<script>
+    $(function () {
+        //Date picker
+        $('#fecha_ini').datepicker({
+            autoclose: true
+        })
 
+        $('#fecha_fin').datepicker({
+            autoclose: true
+        })
+
+    });
+</script>
