--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -150,8 +150,11 @@
                         <button type="button" class="btn btn-primary" id="btn_buscar_og" data-toggle="modal" data-target="#FacturasModal">
                             <i class="fa fa-search"></i>
                         </button>
-                    </div>                    
+                    </div>
                 </div>
+
+                @Html.Action("GridViewPartial_conciliacion_facturas")
+
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_vales">
                 @Html.Action("GridViewPartial_conciliacion_vales")
